--- a/ExpenseTracker/Views/Home/Index.cshtml
+++ b/ExpenseTracker/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
     <h1>Insert Expenses</h1>
 </div>
 <div data-role="content" data-theme="a">
-    <label id="current_expense_info"><strong>Test</strong></label>
+    <label id="current_expense_info">Loading...</label>
     <form id="insert_expense_form">
         <div data-role="fieldcontain">
             <fieldset data-role="controlgroup">
